# ppt-sync

./: Cargo.toml
libppt-sync/: Cargo.toml  libppt-sync.h
libppt-sync/src/: lib.rs
ppt-sync/: Cargo.toml
ppt-sync/src/: main.rs
